--- a/htdocs/master.html
+++ b/htdocs/master.html
@@ -4,8 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>KISP接口文档</title>
     <!--grunt.css.begin-->
-    <link href="css/global.debug.css" rel="stylesheet" />
-    <link href="css/main/index.debug.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/global.debug.css" />
+    <link rel="stylesheet" href="css/main/index.debug.css" />
+
     <!--grunt.css.end-->
 </head>
 <body>
@@ -55,42 +56,6 @@
                     </div>
                     -->
                 </div>
-
-
-
-
-                <ol id="ul-page-tabs" class="tabs">
-                   <!--
-                    #--home.begin--#
-                    <li class="home {actived-class}" data-index="{index}" {draggable}>
-                        <i class="icon-home"></i>
-                    </li>
-                    #--home.end--#
-
-                    #--item.begin--#
-                    <li class="{actived-class}" data-index="{index}" {draggable} >
-                        {name}<i class="icon-close" title="关闭本页签" ></i>
-                    </li>
-                    #--item.end--#
-                    -->
-                </ol>
-
-
-
-                <div id="div-page-list" class="tab-more">
-                    <i class="tab-dropdown" title="所有页签列表"></i>
-                    <ul id="ul-page-list" class="tab-more-content" style="display: none;">
-                        <!--
-                        <li data-index="{index}" style="{item-display}" class="{on}"{draggable} >
-                            {name}<i class="icon-close" title="{title}" style="{icon-display}"></i>
-                        </li>
-                        -->
-
-                    </ul>
-                </div>
-                
-
-
             </div>
         </div>
         <div class="container">
@@ -111,20 +76,10 @@
     <script src="config.js"></script>
 
     <!--grunt.js.begin-->
-
     <script src="modules/main/MenuData.js"></script>
     <script src="modules/main/Sidebar.js"></script>
-    <script src="modules/main/PageTabs.js"></script>
-    <script src="modules/main/PageList.js"></script>
     <script src="modules/main/Iframes.js"></script>
-    <script src="modules/main/Tips.js"></script>
-
-    <!--
-
-    <script src="modules/main/Fixer.js"></script>
-    -->
     <script src="master.js"></script>
-
     <!--grunt.js.end-->
 
 
