--- a/htdocs/index.master.html
+++ b/htdocs/index.master.html
@@ -5,7 +5,11 @@
     <title>KISP接口文档</title>
     <!--grunt.css.begin-->
     <link rel="stylesheet" href="f/highlight/highlight.debug.css" />
-    <link rel="stylesheet" href="css/global.debug.css" />
+    <link rel="stylesheet" href="css/sidebar.debug.css" />
+    <link rel="stylesheet" href="css/main.debug.css" />
+    <link rel="stylesheet" href="css/panel.debug.css" />
+    <link rel="stylesheet" href="css/demos.debug.css" />
+    <link rel="stylesheet" href="css/list.debug.css" />
     <link rel="stylesheet" href="css/index.debug.css" />
 
     <!--grunt.css.end-->
@@ -13,7 +17,7 @@
 <body>
 
     <link rel="grunt" href="partial/sidebar.html" />
-    <link rel="grunt" href="partial/content.html" />
+    <link rel="grunt" href="partial/main.html" />
 
 
 
