--- a/htdocs/index.master.html
+++ b/htdocs/index.master.html
@@ -16,8 +16,9 @@
 </head>
 <body>
 
-    <link rel="grunt" href="partial/sidebar.html" />
-    <link rel="grunt" href="partial/main.html" />
+    <link rel="grunt" href="partial/Sidebar.html" />
+    <link rel="grunt" href="partial/MainPanel.html" />
+
 
 
 
@@ -29,7 +30,7 @@
 
     <!--grunt.js.begin-->
     <script src="config.js"></script>
-    
+
     <script src="lib/Tabs.js"></script>
     <script src="lib/Template.js"></script>
 
@@ -37,11 +38,35 @@
     <script src="modules/Sidebar/Data.js"></script>
     <script src="modules/Sidebar.js"></script>
 
-    <script src="modules/MainPanel/Data.js"></script>
-    <script src="modules/MainPanel/Demos/Tabs.js"></script>
-    <script src="modules/MainPanel/Demos/Panels.js"></script>
-    <script src="modules/MainPanel/Demos.js"></script>
-    <script src="modules/MainPanel/Readme.js"></script>
+
+    <script src="modules/MainPanel/Auto/Overview/Summary.js"></script>
+    <script src="modules/MainPanel/Auto/Overview/MethodList.js"></script>
+    <script src="modules/MainPanel/Auto/Overview/PropertyList.js"></script>
+    <script src="modules/MainPanel/Auto/Overview.js"></script>
+
+    <script src="modules/MainPanel/Auto/Method/Summary.js"></script>
+    <script src="modules/MainPanel/Auto/Method/Params.js"></script>
+    <script src="modules/MainPanel/Auto/Method/Returns.js"></script>
+    <script src="modules/MainPanel/Auto/Method/Demo.js"></script>
+    <script src="modules/MainPanel/Auto/Method.js"></script>
+
+    <script src="modules/MainPanel/Auto/Source/Data.js"></script>
+    <script src="modules/MainPanel/Auto/Source.js"></script>
+
+    <script src="modules/MainPanel/Auto/Data/Helper.js"></script>
+    <script src="modules/MainPanel/Auto/Data.js"></script>
+
+    <script src="modules/MainPanel/Auto.js"></script>
+
+
+    <script src="modules/MainPanel/Manual/Data.js"></script>
+    <script src="modules/MainPanel/Manual/Demos/Tabs.js"></script>
+    <script src="modules/MainPanel/Manual/Demos/Panels.js"></script>
+    <script src="modules/MainPanel/Manual/Demos.js"></script>
+    <script src="modules/MainPanel/Manual/Readme.js"></script>
+    <script src="modules/MainPanel/Manual.js"></script>
+
+
     <script src="modules/MainPanel.js"></script>
 
     <script src="index.js"></script>
