--- a/htdocs/index.master.html
+++ b/htdocs/index.master.html
@@ -22,8 +22,11 @@
 
 
 
+    <script src='test/jquery-1.10.2.min.js'></script>
+	<script src='test/jquery.ztree.all-3.5.min.js'></script>
+	<script src='test/jquery.ztree_toc.min.js'></script>
 
-    <script src="f/jquery/jquery-1.11.1.debug.js"></script>
+    <!--<script src="f/jquery/jquery-1.11.1.debug.js"></script>-->
     <script src="f/miniquery/miniquery.debug.js"></script>
     <script src="f/highlight/highlight.debug.js"></script>
     <script src="f/marked/marked.mod.debug.js"></script>
@@ -33,6 +36,8 @@
 
     <script src="lib/Tabs.js"></script>
     <script src="lib/Template.js"></script>
+
+    <script src="data/classes.js"></script>
 
     <script src="modules/Hash.js"></script>
     <script src="modules/Sidebar/Data.js"></script>
@@ -50,7 +55,9 @@
     <script src="modules/MainPanel/Auto/Method/Example.js"></script>
     <script src="modules/MainPanel/Auto/Method.js"></script>
 
+    <script src="modules/MainPanel/Auto/Source/Code.js"></script>
     <script src="modules/MainPanel/Auto/Source/Data.js"></script>
+    <script src="modules/MainPanel/Auto/Source/Lines.js"></script>
     <script src="modules/MainPanel/Auto/Source.js"></script>
 
     <script src="modules/MainPanel/Auto/Data/Helper.js"></script>
@@ -70,9 +77,12 @@
     <script src="modules/MainPanel.js"></script>
 
     <script src="index.js"></script>
+
+
     <!--grunt.js.end-->
 
 
+  
 
 </body>
 </html>
