--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -375,6 +375,7 @@
     <script src="data/classes.js"></script>
 
     <script src="modules/Hash.js"></script>
+    <script src="modules/Scroller.js"></script>
     <script src="modules/Sidebar/Data.js"></script>
     <script src="modules/Sidebar.js"></script>
 
