--- a/htdocs/index.master.html
+++ b/htdocs/index.master.html
@@ -34,6 +34,7 @@
     <!--grunt.js.begin-->
     <script src="config.js"></script>
 
+    <script src="lib/Highlight.js"></script>
     <script src="lib/Tabs.js"></script>
     <script src="lib/Template.js"></script>
 
