--- a/htdocs/index.master.html
+++ b/htdocs/index.master.html
@@ -16,17 +16,18 @@
 </head>
 <body>
 
+    <div>
     <link rel="grunt" href="partial/Sidebar.html" />
     <link rel="grunt" href="partial/MainPanel.html" />
+    </div>
 
 
 
-
-    <script src='test/jquery-1.10.2.min.js'></script>
+    <!--<script src='test/jquery-1.10.2.min.js'></script>
 	<script src='test/jquery.ztree.all-3.5.min.js'></script>
-	<script src='test/jquery.ztree_toc.min.js'></script>
+	<script src='test/jquery.ztree_toc.min.js'></script>-->
 
-    <!--<script src="f/jquery/jquery-1.11.1.debug.js"></script>-->
+    <script src="f/jquery/jquery-1.11.1.debug.js"></script>
     <script src="f/miniquery/miniquery.debug.js"></script>
     <script src="f/highlight/highlight.debug.js"></script>
     <script src="f/marked/marked.mod.debug.js"></script>
@@ -39,6 +40,7 @@
     <script src="lib/Template.js"></script>
 
     <script src="data/classes.js"></script>
+    <script src="data/sidebar.js"></script>
 
     <script src="modules/Hash.js"></script>
     <script src="modules/Scroller.js"></script>
@@ -59,6 +61,7 @@
 
     <script src="modules/MainPanel/Auto/Source/Code.js"></script>
     <script src="modules/MainPanel/Auto/Source/Data.js"></script>
+    <script src="modules/MainPanel/Auto/Source/Header.js"></script>
     <script src="modules/MainPanel/Auto/Source/Lines.js"></script>
     <script src="modules/MainPanel/Auto/Source.js"></script>
 
