--- a/htdocs/index.master.html
+++ b/htdocs/index.master.html
@@ -39,7 +39,7 @@
     <script src="lib/Tabs.js"></script>
     <script src="lib/Template.js"></script>
 
-    <script src="data/classes.js"></script>
+    <script src="data/jsdoc/jsdoc.debug.js"></script>
     <script src="data/sidebar.js"></script>
 
     <script src="modules/Hash.js"></script>
