--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -255,7 +255,7 @@
                         <div id="div-source-header" class="header source">
                         <!--
                             <span>源代码</span>
-                            <a href="data/jsdoc/{href}" target="_blank">打开</a>
+                            <a href="data/{href}" target="_blank">打开</a>
                          -->
                         </div>
                         <div class="content demo">
@@ -284,7 +284,7 @@
                     <div id="div-readme-header" class="header readme">
                         <!--
                         <span>readme.md</span>
-                        <a class="" href="data/demo/{name}/readme.md" target="_blank">打开</a>
+                        <a class="" href="{path}/{name}/readme.md" target="_blank">打开</a>
                         -->
                     </div>
                     <div id="div-readme-content" class="content markdown">
@@ -355,62 +355,62 @@
 
 
 
-    <script src="f/jquery/jquery-1.11.1.debug.js?15c7973b"></script>
-    <script src="f/miniquery/miniquery.debug.js?15c7973b"></script>
-    <script src="f/highlight/highlight.debug.js?15c7973b"></script>
-    <script src="f/marked/marked.mod.debug.js?15c7973b"></script>
+    <script src="f/jquery/jquery-1.11.1.debug.js?1d35c24f"></script>
+    <script src="f/miniquery/miniquery.debug.js?1d35c24f"></script>
+    <script src="f/highlight/highlight.debug.js?1d35c24f"></script>
+    <script src="f/marked/marked.mod.debug.js?1d35c24f"></script>
 
-    <script src="config.js?15c7973b"></script>
+    <script src="config.js?1d35c24f"></script>
 
     <!--grunt.js.begin-->
-    <script src="lib/Highlight.js?15c7973b"></script>
-    <script src="lib/JSON.js?15c7973b"></script>
-    <script src="lib/Path.js?15c7973b"></script>
-    <script src="lib/Tabs.js?15c7973b"></script>
-    <script src="lib/Template.js?15c7973b"></script>
+    <script src="lib/Highlight.js?1d35c24f"></script>
+    <script src="lib/JSON.js?1d35c24f"></script>
+    <script src="lib/Path.js?1d35c24f"></script>
+    <script src="lib/Tabs.js?1d35c24f"></script>
+    <script src="lib/Template.js?1d35c24f"></script>
 
     
 
-    <script src="modules/Hash.js?15c7973b"></script>
-    <script src="modules/Scroller.js?15c7973b"></script>
-    <script src="modules/Sidebar/Data.js?15c7973b"></script>
-    <script src="modules/Sidebar.js?15c7973b"></script>
+    <script src="modules/Hash.js?1d35c24f"></script>
+    <script src="modules/Scroller.js?1d35c24f"></script>
+    <script src="modules/Sidebar/Data.js?1d35c24f"></script>
+    <script src="modules/Sidebar.js?1d35c24f"></script>
 
 
-    <script src="modules/MainPanel/Auto/Overview/Summary.js?15c7973b"></script>
-    <script src="modules/MainPanel/Auto/Overview/MethodList.js?15c7973b"></script>
-    <script src="modules/MainPanel/Auto/Overview/PropertyList.js?15c7973b"></script>
-    <script src="modules/MainPanel/Auto/Overview.js?15c7973b"></script>
+    <script src="modules/MainPanel/Auto/Overview/Summary.js?1d35c24f"></script>
+    <script src="modules/MainPanel/Auto/Overview/MethodList.js?1d35c24f"></script>
+    <script src="modules/MainPanel/Auto/Overview/PropertyList.js?1d35c24f"></script>
+    <script src="modules/MainPanel/Auto/Overview.js?1d35c24f"></script>
 
-    <script src="modules/MainPanel/Auto/Method/Summary.js?15c7973b"></script>
-    <script src="modules/MainPanel/Auto/Method/Params.js?15c7973b"></script>
-    <script src="modules/MainPanel/Auto/Method/Returns.js?15c7973b"></script>
-    <script src="modules/MainPanel/Auto/Method/Example.js?15c7973b"></script>
-    <script src="modules/MainPanel/Auto/Method.js?15c7973b"></script>
+    <script src="modules/MainPanel/Auto/Method/Summary.js?1d35c24f"></script>
+    <script src="modules/MainPanel/Auto/Method/Params.js?1d35c24f"></script>
+    <script src="modules/MainPanel/Auto/Method/Returns.js?1d35c24f"></script>
+    <script src="modules/MainPanel/Auto/Method/Example.js?1d35c24f"></script>
+    <script src="modules/MainPanel/Auto/Method.js?1d35c24f"></script>
 
-    <script src="modules/MainPanel/Auto/Source/Code.js?15c7973b"></script>
-    <script src="modules/MainPanel/Auto/Source/Data.js?15c7973b"></script>
-    <script src="modules/MainPanel/Auto/Source/Header.js?15c7973b"></script>
-    <script src="modules/MainPanel/Auto/Source/Lines.js?15c7973b"></script>
-    <script src="modules/MainPanel/Auto/Source.js?15c7973b"></script>
+    <script src="modules/MainPanel/Auto/Source/Code.js?1d35c24f"></script>
+    <script src="modules/MainPanel/Auto/Source/Data.js?1d35c24f"></script>
+    <script src="modules/MainPanel/Auto/Source/Header.js?1d35c24f"></script>
+    <script src="modules/MainPanel/Auto/Source/Lines.js?1d35c24f"></script>
+    <script src="modules/MainPanel/Auto/Source.js?1d35c24f"></script>
 
-    <script src="modules/MainPanel/Auto/Data/Helper.js?15c7973b"></script>
-    <script src="modules/MainPanel/Auto/Data.js?15c7973b"></script>
+    <script src="modules/MainPanel/Auto/Data/Helper.js?1d35c24f"></script>
+    <script src="modules/MainPanel/Auto/Data.js?1d35c24f"></script>
 
-    <script src="modules/MainPanel/Auto.js?15c7973b"></script>
-
-
-    <script src="modules/MainPanel/Manual/Data.js?15c7973b"></script>
-    <script src="modules/MainPanel/Manual/Demos/Tabs.js?15c7973b"></script>
-    <script src="modules/MainPanel/Manual/Demos/Panels.js?15c7973b"></script>
-    <script src="modules/MainPanel/Manual/Demos.js?15c7973b"></script>
-    <script src="modules/MainPanel/Manual/Readme.js?15c7973b"></script>
-    <script src="modules/MainPanel/Manual.js?15c7973b"></script>
+    <script src="modules/MainPanel/Auto.js?1d35c24f"></script>
 
 
-    <script src="modules/MainPanel.js?15c7973b"></script>
+    <script src="modules/MainPanel/Manual/Data.js?1d35c24f"></script>
+    <script src="modules/MainPanel/Manual/Demos/Tabs.js?1d35c24f"></script>
+    <script src="modules/MainPanel/Manual/Demos/Panels.js?1d35c24f"></script>
+    <script src="modules/MainPanel/Manual/Demos.js?1d35c24f"></script>
+    <script src="modules/MainPanel/Manual/Readme.js?1d35c24f"></script>
+    <script src="modules/MainPanel/Manual.js?1d35c24f"></script>
 
-    <script src="index.js?15c7973b"></script>
+
+    <script src="modules/MainPanel.js?1d35c24f"></script>
+
+    <script src="index.js?1d35c24f"></script>
 
 
     <!--grunt.js.end-->
