--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="f/highlight/highlight.debug.css" />
 
     <!--grunt.css.begin-->
-    <link href="style/css/style.less.index.debug.css?46" rel="stylesheet" />
-    <link href="style/css/style.less.demos.debug.css?46" rel="stylesheet" />
-    <link href="style/css/style.less.list.debug.css?46" rel="stylesheet" />
-    <link href="style/css/style.less.wrapper.debug.css?46" rel="stylesheet" />
-    <link href="style/css/style.less.panel.debug.css?46" rel="stylesheet" />
-    <link href="style/css/style.less.markdown.debug.css?46" rel="stylesheet" />
-    <link href="style/css/modules.main-panel.main.debug.css?46" rel="stylesheet" />
-    <link href="style/css/modules.readme.readme.debug.css?46" rel="stylesheet" />
-    <link href="style/css/modules.sidebar.sidebar.debug.css?46" rel="stylesheet" />
+    <link href="style/css/style.less.index.debug.css?5b" rel="stylesheet" />
+    <link href="style/css/style.less.demos.debug.css?5b" rel="stylesheet" />
+    <link href="style/css/style.less.list.debug.css?5b" rel="stylesheet" />
+    <link href="style/css/style.less.wrapper.debug.css?5b" rel="stylesheet" />
+    <link href="style/css/style.less.panel.debug.css?5b" rel="stylesheet" />
+    <link href="style/css/style.less.markdown.debug.css?5b" rel="stylesheet" />
+    <link href="style/css/modules.main-panel.main.debug.css?5b" rel="stylesheet" />
+    <link href="style/css/modules.readme.readme.debug.css?5b" rel="stylesheet" />
+    <link href="style/css/modules.sidebar.sidebar.debug.css?5b" rel="stylesheet" />
     <!--grunt.css.end-->
 
 </head>
@@ -375,59 +375,59 @@
         
     </div>
 
-    <script src="f/jquery/jquery-1.11.1.debug.js?D0"></script>
-    <script src="f/miniquery/miniquery.debug.js?D0"></script>
-    <script src="f/highlight/highlight.debug.js?D0"></script>
-    <script src="f/marked/marked.mod.debug.js?D0"></script>
-    <script src="f/resolve-url/resolve-url.debug.js?D0"></script>
+    <script src="f/jquery/jquery-1.11.1.debug.js?3C"></script>
+    <script src="f/miniquery/miniquery.debug.js?3C"></script>
+    <script src="f/highlight/highlight.debug.js?3C"></script>
+    <script src="f/marked/marked.mod.debug.js?3C"></script>
+    <script src="f/resolve-url/resolve-url.debug.js?3C"></script>
 
-    <script src="config.js?D0"></script>
+    <script src="config.js?3C"></script>
 
     <!--grunt.js.begin-->
-    <script src="lib/Highlight.js?c1"></script>
-    <script src="lib/JSON.js?c1"></script>
-    <script src="lib/Markdown/Helper.js?c1"></script>
-    <script src="lib/Markdown.js?c1"></script>
-    <script src="lib/Path.js?c1"></script>
-    <script src="lib/Tabs.js?c1"></script>
-    <script src="lib/Template.js?c1"></script>
-    <script src="modules/Hash.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Data/Helper.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Data.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Method/Example.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Method/Params.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Method/Returns.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Method/Summary.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Method.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Overview/MethodList.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Overview/PropertyList.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Overview/Summary.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Overview.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Source/Code.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Source/Data.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Source/Header.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Source/Lines.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Source.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Auto.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Manual/Data.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Manual/Demos/Panels.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Manual/Demos/Tabs.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Manual/Demos.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Manual/Readme.js?c1"></script>
-    <script src="modules/main-panel/MainPanel/Manual.js?c1"></script>
-    <script src="modules/main-panel/MainPanel.js?c1"></script>
-    <script src="modules/readme/Readme/Source/Header.js?c1"></script>
-    <script src="modules/readme/Readme/Source/Mark.js?c1"></script>
-    <script src="modules/readme/Readme/Source.js?c1"></script>
-    <script src="modules/readme/Readme/Title.js?c1"></script>
-    <script src="modules/readme/Readme/Url.js?c1"></script>
-    <script src="modules/readme/Readme.js?c1"></script>
-    <script src="modules/Scroller.js?c1"></script>
-    <script src="modules/sidebar/Sidebar/Data.js?c1"></script>
-    <script src="modules/sidebar/Sidebar/Scroller.js?c1"></script>
-    <script src="modules/sidebar/Sidebar/Title.js?c1"></script>
-    <script src="modules/sidebar/Sidebar.js?c1"></script>
-    <script src="index.js?c1"></script>
+    <script src="lib/Highlight.js?8b"></script>
+    <script src="lib/JSON.js?8b"></script>
+    <script src="lib/Markdown/Helper.js?8b"></script>
+    <script src="lib/Markdown.js?8b"></script>
+    <script src="lib/Path.js?8b"></script>
+    <script src="lib/Tabs.js?8b"></script>
+    <script src="lib/Template.js?8b"></script>
+    <script src="modules/Hash.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Data/Helper.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Data.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Method/Example.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Method/Params.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Method/Returns.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Method/Summary.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Method.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Overview/MethodList.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Overview/PropertyList.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Overview/Summary.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Overview.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Source/Code.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Source/Data.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Source/Header.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Source/Lines.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Source.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Auto.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Manual/Data.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Manual/Demos/Panels.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Manual/Demos/Tabs.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Manual/Demos.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Manual/Readme.js?8b"></script>
+    <script src="modules/main-panel/MainPanel/Manual.js?8b"></script>
+    <script src="modules/main-panel/MainPanel.js?8b"></script>
+    <script src="modules/readme/Readme/Source/Header.js?8b"></script>
+    <script src="modules/readme/Readme/Source/Mark.js?8b"></script>
+    <script src="modules/readme/Readme/Source.js?8b"></script>
+    <script src="modules/readme/Readme/Title.js?8b"></script>
+    <script src="modules/readme/Readme/Url.js?8b"></script>
+    <script src="modules/readme/Readme.js?8b"></script>
+    <script src="modules/Scroller.js?8b"></script>
+    <script src="modules/sidebar/Sidebar/Data.js?8b"></script>
+    <script src="modules/sidebar/Sidebar/Scroller.js?8b"></script>
+    <script src="modules/sidebar/Sidebar/Title.js?8b"></script>
+    <script src="modules/sidebar/Sidebar.js?8b"></script>
+    <script src="index.js?8b"></script>
     <!--grunt.js.end-->
 
 
