--- a/htdocs/index.master.html
+++ b/htdocs/index.master.html
@@ -30,6 +30,8 @@
         <link rel="grunt" href="modules/sidebar/sidebar.html" />
         <link rel="grunt" href="modules/main-panel/MainPanel.html" />
     </div>
+    <link rel="grunt" href="modules/fixed-menus/panel.html" />
+
 
     <script src="f/jquery/jquery-1.11.1.debug.js"></script>
     <script src="f/miniquery/miniquery.debug.js"></script>
