--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="f/highlight/highlight.debug.css" />
 
     <!--grunt.css.begin-->
-    <link href="style/css/style.less.index.debug.css?3c" rel="stylesheet" />
-    <link href="style/css/style.less.demos.debug.css?3c" rel="stylesheet" />
-    <link href="style/css/style.less.list.debug.css?3c" rel="stylesheet" />
-    <link href="style/css/style.less.wrapper.debug.css?3c" rel="stylesheet" />
-    <link href="style/css/style.less.panel.debug.css?3c" rel="stylesheet" />
-    <link href="style/css/style.less.markdown.debug.css?3c" rel="stylesheet" />
-    <link href="style/css/modules.main-panel.main.debug.css?3c" rel="stylesheet" />
-    <link href="style/css/modules.readme.readme.debug.css?3c" rel="stylesheet" />
-    <link href="style/css/modules.sidebar.sidebar.debug.css?3c" rel="stylesheet" />
+    <link href="style/css/style.less.index.debug.css?a1" rel="stylesheet" />
+    <link href="style/css/style.less.demos.debug.css?a1" rel="stylesheet" />
+    <link href="style/css/style.less.list.debug.css?a1" rel="stylesheet" />
+    <link href="style/css/style.less.wrapper.debug.css?a1" rel="stylesheet" />
+    <link href="style/css/style.less.panel.debug.css?a1" rel="stylesheet" />
+    <link href="style/css/style.less.markdown.debug.css?a1" rel="stylesheet" />
+    <link href="style/css/modules.fixed-menus.panel.debug.css?a1" rel="stylesheet" />
+    <link href="style/css/modules.main-panel.main.debug.css?a1" rel="stylesheet" />
+    <link href="style/css/modules.readme.readme.debug.css?a1" rel="stylesheet" />
+    <link href="style/css/modules.sidebar.sidebar.debug.css?a1" rel="stylesheet" />
     <!--grunt.css.end-->
 
 </head>
@@ -279,7 +280,8 @@
                             <div id="div-source-header" class="header source">
                             <!--
                                 <span>源代码</span>
-                                <a href="data/{href}" target="_blank" title="在新窗口打开源文件">打开</a>
+                                <a href="data/{href}" target="_blank" title="在新窗口打开源文件">打开文件</a>
+                                <a data-cmd="comment" href="javascript:" title="">隐藏注释</a>
                              -->
                             </div>
                             <div class="content demo">
@@ -377,60 +379,74 @@
         </div>
         
     </div>
+    <ul id="ul-fixed-menus" class="panel-fixed-menus">
+        <li data-cmd="top" class="top">
+            <span class="arrow"></span><span class="describe">顶部</span>
+        </li>
+        <li data-cmd="home" class="home">
+            <span class="describe">首页</span>
+        </li>
+        <li data-cmd="menus" class="menu">
+            <span class="describe">提纲</span>
+        </li>
+    </ul>
+    
 
-    <script src="f/jquery/jquery-1.11.1.debug.js?09"></script>
-    <script src="f/miniquery/miniquery.debug.js?09"></script>
-    <script src="f/highlight/highlight.debug.js?09"></script>
-    <script src="f/marked/marked.mod.debug.js?09"></script>
-    <script src="f/resolve-url/resolve-url.debug.js?09"></script>
 
-    <script src="config.js?09"></script>
+    <script src="f/jquery/jquery-1.11.1.debug.js?38"></script>
+    <script src="f/miniquery/miniquery.debug.js?38"></script>
+    <script src="f/highlight/highlight.debug.js?38"></script>
+    <script src="f/marked/marked.mod.debug.js?38"></script>
+    <script src="f/resolve-url/resolve-url.debug.js?38"></script>
+
+    <script src="config.js?38"></script>
 
     <!--grunt.js.begin-->
-    <script src="lib/Highlight.js?fc"></script>
-    <script src="lib/JSON.js?fc"></script>
-    <script src="lib/Markdown/Helper.js?fc"></script>
-    <script src="lib/Markdown.js?fc"></script>
-    <script src="lib/Path.js?fc"></script>
-    <script src="lib/Tabs.js?fc"></script>
-    <script src="lib/Template.js?fc"></script>
-    <script src="modules/Hash.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Data/Helper.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Data.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Method/Example.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Method/Params.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Method/Returns.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Method/Summary.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Method.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Overview/MethodList.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Overview/PropertyList.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Overview/Summary.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Overview.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Source/Code.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Source/Data.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Source/Header.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Source/Lines.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Source.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Auto.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Manual/Data.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Manual/Demos/Panels.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Manual/Demos/Tabs.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Manual/Demos.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Manual/Readme.js?fc"></script>
-    <script src="modules/main-panel/MainPanel/Manual.js?fc"></script>
-    <script src="modules/main-panel/MainPanel.js?fc"></script>
-    <script src="modules/readme/Readme/Source/Header.js?fc"></script>
-    <script src="modules/readme/Readme/Source/Mark.js?fc"></script>
-    <script src="modules/readme/Readme/Source.js?fc"></script>
-    <script src="modules/readme/Readme/Title.js?fc"></script>
-    <script src="modules/readme/Readme/Url.js?fc"></script>
-    <script src="modules/readme/Readme.js?fc"></script>
-    <script src="modules/Scroller.js?fc"></script>
-    <script src="modules/sidebar/Sidebar/Data.js?fc"></script>
-    <script src="modules/sidebar/Sidebar/Scroller.js?fc"></script>
-    <script src="modules/sidebar/Sidebar/Title.js?fc"></script>
-    <script src="modules/sidebar/Sidebar.js?fc"></script>
-    <script src="index.js?fc"></script>
+    <script src="lib/Highlight.js?84"></script>
+    <script src="lib/JSON.js?84"></script>
+    <script src="lib/Markdown/Helper.js?84"></script>
+    <script src="lib/Markdown.js?84"></script>
+    <script src="lib/Path.js?84"></script>
+    <script src="lib/Tabs.js?84"></script>
+    <script src="lib/Template.js?84"></script>
+    <script src="modules/fixed-menus/FixedMenus.js?84"></script>
+    <script src="modules/Hash.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Data/Helper.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Data.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Method/Example.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Method/Params.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Method/Returns.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Method/Summary.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Method.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Overview/MethodList.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Overview/PropertyList.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Overview/Summary.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Overview.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Source/Code.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Source/Data.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Source/Header.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Source/Lines.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Source.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Auto.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Manual/Data.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Manual/Demos/Panels.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Manual/Demos/Tabs.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Manual/Demos.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Manual/Readme.js?84"></script>
+    <script src="modules/main-panel/MainPanel/Manual.js?84"></script>
+    <script src="modules/main-panel/MainPanel.js?84"></script>
+    <script src="modules/readme/Readme/Source/Header.js?84"></script>
+    <script src="modules/readme/Readme/Source/Mark.js?84"></script>
+    <script src="modules/readme/Readme/Source.js?84"></script>
+    <script src="modules/readme/Readme/Title.js?84"></script>
+    <script src="modules/readme/Readme/Url.js?84"></script>
+    <script src="modules/readme/Readme.js?84"></script>
+    <script src="modules/Scroller.js?84"></script>
+    <script src="modules/sidebar/Sidebar/Data.js?84"></script>
+    <script src="modules/sidebar/Sidebar/Scroller.js?84"></script>
+    <script src="modules/sidebar/Sidebar/Title.js?84"></script>
+    <script src="modules/sidebar/Sidebar.js?84"></script>
+    <script src="index.js?84"></script>
     <!--grunt.js.end-->
 
 
