table thead style

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="f/highlight/highlight.debug.css" />
 
     <!--grunt.css.begin-->
-    <link href="style/css/style.less.index.debug.css?03" rel="stylesheet" />
-    <link href="style/css/style.less.demos.debug.css?03" rel="stylesheet" />
-    <link href="style/css/style.less.list.debug.css?03" rel="stylesheet" />
-    <link href="style/css/style.less.wrapper.debug.css?03" rel="stylesheet" />
-    <link href="style/css/style.less.panel.debug.css?03" rel="stylesheet" />
-    <link href="style/css/style.less.markdown.debug.css?03" rel="stylesheet" />
-    <link href="style/css/modules.fixed-menus.panel.debug.css?03" rel="stylesheet" />
-    <link href="style/css/modules.main-panel.main.debug.css?03" rel="stylesheet" />
-    <link href="style/css/modules.readme.readme.debug.css?03" rel="stylesheet" />
-    <link href="style/css/modules.sidebar.sidebar.debug.css?03" rel="stylesheet" />
+    <link href="style/css/style.less.index.debug.css?24" rel="stylesheet" />
+    <link href="style/css/style.less.demos.debug.css?24" rel="stylesheet" />
+    <link href="style/css/style.less.list.debug.css?24" rel="stylesheet" />
+    <link href="style/css/style.less.wrapper.debug.css?24" rel="stylesheet" />
+    <link href="style/css/style.less.panel.debug.css?24" rel="stylesheet" />
+    <link href="style/css/style.less.markdown.debug.css?24" rel="stylesheet" />
+    <link href="style/css/modules.fixed-menus.panel.debug.css?24" rel="stylesheet" />
+    <link href="style/css/modules.main-panel.main.debug.css?24" rel="stylesheet" />
+    <link href="style/css/modules.readme.readme.debug.css?24" rel="stylesheet" />
+    <link href="style/css/modules.sidebar.sidebar.debug.css?24" rel="stylesheet" />
     <!--grunt.css.end-->
 
 </head>
@@ -393,61 +393,61 @@
     
 
 
-    <script src="f/jquery/jquery-1.11.1.debug.js?D3"></script>
-    <script src="f/miniquery/miniquery.debug.js?D3"></script>
-    <script src="f/highlight/highlight.debug.js?D3"></script>
-    <script src="f/marked/marked.mod.debug.js?D3"></script>
-    <script src="f/resolve-url/resolve-url.debug.js?D3"></script>
+    <script src="f/jquery/jquery-1.11.1.debug.js?EB"></script>
+    <script src="f/miniquery/miniquery.debug.js?EB"></script>
+    <script src="f/highlight/highlight.debug.js?EB"></script>
+    <script src="f/marked/marked.mod.debug.js?EB"></script>
+    <script src="f/resolve-url/resolve-url.debug.js?EB"></script>
 
-    <script src="config.js?D3"></script>
+    <script src="config.js?EB"></script>
 
     <!--grunt.js.begin-->
-    <script src="lib/Highlight.js?32"></script>
-    <script src="lib/JSON.js?32"></script>
-    <script src="lib/Markdown/Helper.js?32"></script>
-    <script src="lib/Markdown/Loader.js?32"></script>
-    <script src="lib/Markdown.js?32"></script>
-    <script src="lib/Path.js?32"></script>
-    <script src="lib/Tabs.js?32"></script>
-    <script src="lib/Template.js?32"></script>
-    <script src="modules/fixed-menus/FixedMenus.js?32"></script>
-    <script src="modules/Hash.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Data/Helper.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Data.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Method/Example.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Method/Params.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Method/Returns.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Method/Summary.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Method.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Overview/MethodList.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Overview/PropertyList.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Overview/Summary.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Overview.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Source/Code.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Source/Data.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Source/Header.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Source/Lines.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Auto/Source.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Auto.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Manual/Data.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Manual/Demos/Panels.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Manual/Demos/Tabs.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Manual/Demos.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Manual/Readme.js?32"></script>
-    <script src="modules/main-panel/MainPanel/Manual.js?32"></script>
-    <script src="modules/main-panel/MainPanel.js?32"></script>
-    <script src="modules/readme/Readme/Source/Header.js?32"></script>
-    <script src="modules/readme/Readme/Source/Mark.js?32"></script>
-    <script src="modules/readme/Readme/Source.js?32"></script>
-    <script src="modules/readme/Readme/Title.js?32"></script>
-    <script src="modules/readme/Readme/Url.js?32"></script>
-    <script src="modules/readme/Readme.js?32"></script>
-    <script src="modules/Scroller.js?32"></script>
-    <script src="modules/sidebar/Sidebar/Data.js?32"></script>
-    <script src="modules/sidebar/Sidebar/Scroller.js?32"></script>
-    <script src="modules/sidebar/Sidebar/Title.js?32"></script>
-    <script src="modules/sidebar/Sidebar.js?32"></script>
-    <script src="index.js?32"></script>
+    <script src="lib/Highlight.js?fe"></script>
+    <script src="lib/JSON.js?fe"></script>
+    <script src="lib/Markdown/Helper.js?fe"></script>
+    <script src="lib/Markdown/Loader.js?fe"></script>
+    <script src="lib/Markdown.js?fe"></script>
+    <script src="lib/Path.js?fe"></script>
+    <script src="lib/Tabs.js?fe"></script>
+    <script src="lib/Template.js?fe"></script>
+    <script src="modules/fixed-menus/FixedMenus.js?fe"></script>
+    <script src="modules/Hash.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Data/Helper.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Data.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Method/Example.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Method/Params.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Method/Returns.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Method/Summary.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Method.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Overview/MethodList.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Overview/PropertyList.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Overview/Summary.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Overview.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Source/Code.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Source/Data.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Source/Header.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Source/Lines.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Auto/Source.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Auto.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Manual/Data.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Manual/Demos/Panels.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Manual/Demos/Tabs.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Manual/Demos.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Manual/Readme.js?fe"></script>
+    <script src="modules/main-panel/MainPanel/Manual.js?fe"></script>
+    <script src="modules/main-panel/MainPanel.js?fe"></script>
+    <script src="modules/readme/Readme/Source/Header.js?fe"></script>
+    <script src="modules/readme/Readme/Source/Mark.js?fe"></script>
+    <script src="modules/readme/Readme/Source.js?fe"></script>
+    <script src="modules/readme/Readme/Title.js?fe"></script>
+    <script src="modules/readme/Readme/Url.js?fe"></script>
+    <script src="modules/readme/Readme.js?fe"></script>
+    <script src="modules/Scroller.js?fe"></script>
+    <script src="modules/sidebar/Sidebar/Data.js?fe"></script>
+    <script src="modules/sidebar/Sidebar/Scroller.js?fe"></script>
+    <script src="modules/sidebar/Sidebar/Title.js?fe"></script>
+    <script src="modules/sidebar/Sidebar.js?fe"></script>
+    <script src="index.js?fe"></script>
     <!--grunt.js.end-->
 
 
